<resources>
    <string name="app_name">Peestash</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo">peestash logo</string>
    <string name="hint_email">Email</string>
    <string name="votreEmail">Votre e-mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="mdpOublie">Mot de passe oublié ?</string>
    <string name="btn_register_artist">Artiste</string>
    <string name="btn_register_etablissement">Établissement</string>
    <string name="inscription">Pas encore membre ? Inscrivez-vous en tant que... </string>
    <string name="title_activity_register_artist">Je suis un artiste</string>
    <string name="title_activity_register_etablissement">Je suis un etablissement</string>
    <string name="title_activity_artist_home">ArtistHomeActivity</string>
    <string name="title_activity_etablissement_home">EtablissementHomeActivity</string>
    <string name="title_activity_edit_artist_profil">EditArtistProfilActivity</string>
    <string name="title_activity_liste_deroulante">ListeDeroulanteActivity</string>
    <string name="title_activity_edit_etablissement_profil">EditEtablissementProfilActivity</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Mon profil</item>
        <item>Mes événements</item>
        <item>Mes notifications</item>
        <item>Mes options</item>
        <item>Réglage du filtre</item>
        <item>Déconnexion</item>
        <item>Supprimer mon compte</item>
    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/icon_home</item>
        <item>@drawable/icon_profil</item>
        <item>@drawable/icon_events</item>
        <item>@drawable/icon_messages</item>
        <item>@drawable/icon_options</item>
        <item>@drawable/icon_filtre</item>
        <item>@drawable/icon_lougout</item>
        <item>@drawable/icon_supprimer</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">Menu artiste</string>
    <string name="title_activity_etb_main">Menu etablissement</string>
    <string name="btnEditProfil">Modifier mes informations</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_slide">Peestash</string>
    <string name="firstLayout">Bienvenue ! </string>
    <string name="secondLayout">Qu\'est-ce que Peestash ? </string>
    <string name="desc_appli">Des artistes de qualite a votre disposition pour un show d exception</string>
    <string name="list_fonc">
        Vous etes talentueux ? Creatif ? Passionne de musique ? Venez profiter de scenes d exception.
    </string>

    <string name="seconnecter">Se connecter</string>
    <string name="logout">Me deconnecter</string>
    <string name="etb">Etablissements</string>
    <string name="art">Artistes</string>
    <string name="Event">Evènements</string>
    <string name="Event_status">Statut du recrutement</string>
    <string name="BtnAddEvents">Ajouter un évènement</string>
    <string name="BtnGetEvents">Voir mes évènements</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="email_template">Bienvenue %1$s sur notre application Peestash,
        \n\nPour activer votre compte, veuillez cliquer sur le lien ci dessous ou copier/coller dans votre navigateur internet
        \n\nhttp://peestash.peestash.fr/activation.php?email=%2$s&amp;guid=%3$s
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.

    </string>
    <string name="enregistContact"><u>Enregistrer</u></string>
    <string name="votreNomScene">Votre nom de scène<b><font color="red">*</font></b></string>
    <string name="email">Votre E-mail<b><font color="red">*</font></b></string>
    <string name="confEmail">Confirmez votre e-mail<b><font color="red">*</font></b></string>
    <string name="mdp">Votre mot de passe<b><font color="red">*</font></b></string>
    <string name="confMdp">Confirmez votre mot de passe<b><font color="red">*</font></b></string>
    <string name="nomEtb">Votre nom d\'établissement<b><font color="red">*</font></b></string>
    <string name="emailEtb">Votre e-mail<b><font color="red">*</font></b></string>
    <string name="confEmailEtb">Confirmez votre e-mail<b><font color="red">*</font></b></string>
    <string name="mdpEtb">Votre mot de passe<b><font color="red">*</font></b></string>
    <string name="confMdpEtb">Confirmez votre mot de passe<b><font color="red">*</font></b></string>
    <string name="nomScene">Nom de scène<b><font color="red">*</font></b></string>
    <string name="adress">Adresse<b><font color="red">*</font></b></string>
    <string name="codePostal">Code Postal<b><font color="red">*</font></b></string>
    <string name="Ville">Ville<b><font color="red">*</font></b></string>
    <string name="Nom">Nom<b><font color="red">*</font></b></string>
    <string name="Prenom">Prénom<b><font color="red">*</font></b></string>
    <string name="Age">Âge<b><font color="red">*</font></b></string>
    <string name="typeArtist">Vous êtes :<b><font color="red">*</font></b></string>
    <string name="genreMusical">Genre Musical<b><font color="red">*</font></b></string>
    <string name="Pays">Pays<b><font color="red">*</font></b></string>
    <string name="telFixe">Tel Fixe</string>
    <string name="telMobile">Tel Mobile<b><font color="red">*</font></b></string>
    <string name="Dispos">Mes disponibilités<b><font color="red">*</font></b></string>
    <string name="idPlaylist">ID de votre playlist Soundcloud<b><font color="red">*</font></b></string>
    <string name="siteWeb">Site Web<b><font color="red">*</font></b></string>
    <string name="facebook">Facebook<b><font color="red">*</font></b></string>
    <string name="twitter">Twitter<b><font color="red">*</font></b></string>
    <string name="VotreEmail">Votre E-mail<b><font color="red">*</font></b></string>
    <string name="modifEmail">Modifier votre e-mail</string>
    <string name="modifMdp">Modifier votre mot de passe</string>
    <string name="confirmMdp">Confirmez votre mot de passe</string>
    <string name="requiredFields"><b><font color="red">*</font></b>Tous les champs sont obligatoires!</string>
    <string name="cgu">*J\'ai lu et j\'accepte les CGU</string>
    <string name="facebook_app_id">335426429995872</string>
    <string name="modifProfil"><u>Modifier</u></string>
    <string name="string_user_name">Bonjour %1$s</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <string-array name="genres_array">
            <item>Rock</item>
            <item>Pop</item>
            <item>Jazz</item>
    </string-array>

</resources>