<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/beige"

        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:focusableInTouchMode="true"
                  >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_alignParentTop="true"

                >
            <ImageView
                    android:id="@+id/logoPeestash"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/peestashlogo" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

            <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

            <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mdpOublie"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dip"
                    android:gravity="right"
                    />

            <!-- Login Button -->

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/orange_button"
                    android:text="@string/connexion"
                    style="@style/button_text" />

            <!-- Link to Login Screen -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:layout_marginTop="30dip"
                    android:gravity="center"
                    />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="80dp"
                        android:id="@+id/btnRegisterArtist"
                        android:layout_height="match_parent"
                        android:layout_marginRight="150dp"
                        android:src="@drawable/icon_artist"/>

                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:id="@+id/btnRegisterEtablissement"
                        android:src="@drawable/icon_etb"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>


