<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|center"
            android:background="@drawable/bg"


        >
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">




    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/l1"
            >

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/etb" />
    <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_below="@+id/textView"

            android:text="@string/desc_appli" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/l2"
            android:layout_below="@+id/l1"
            >
        <ImageView

                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo"
                android:layout_marginTop="-35dp"
                android:src="@drawable/icon_etb" />

    </LinearLayout>
        </RelativeLayout>


</ScrollView>