<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/beige"


        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:focusableInTouchMode="true"
                      android:gravity="left"
                >

                <!--<TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="30dp"
                        android:text="Créer mon compte d'artiste"
                       />-->

                <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/textView1"
                        android:layout_marginTop="20dp"
                        android:text="@string/votreNomScene" />
                <EditText
                        android:id="@+id/editPseudo"
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/textView4"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:background="@drawable/bg_edittext"
                        android:hint="Votre nom de scene"
                        android:textColorHint="@color/gray"/>

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/editPseudo"
                        android:layout_marginTop="10dp"
                        android:text="@string/email" />
                <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="340dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/textView3"
                        android:background="@drawable/bg_edittext"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/gray"
                        android:hint="email@live.fr" />



                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/editEmail"
                        android:layout_marginTop="10dp"
                        android:text="@string/confEmail" />



                <EditText
                        android:id="@+id/editConfirmEmail"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_below="@+id/textView2"
                        android:background="@drawable/bg_edittext"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:hint="email@live.fr"
                        android:textColorHint="@color/gray"
                        android:layout_width="340dp"
                        />


                <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/editConfirmEmail"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/mdp" />

                <EditText
                        android:id="@+id/editPassword"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView5"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:background="@drawable/bg_edittext"
                        android:layout_width="340dp"
                        android:textColorHint="@color/gray"
                        android:hint="Mot de passe"/>

                <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/editPassword"
                        android:text="@string/confMdp" />


            <EditText
                    android:id="@+id/editConfirmMdp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_width="340dp"
                    android:textColorHint="@color/gray"
                    android:hint="Confirmation mdp"/>

               <!-- <Switch
                        android:id="@+id/mySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/cgu"

                        />-->

                <Button
                    android:id="@+id/btregister"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="left"
                    android:layout_below="@+id/editConfirmMdp"
                    android:text="Je crée mon compte"
                    android:background="@drawable/orange_button"
                    style="@style/button_text"/>


                <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                          android:gravity="right"
                          android:text="@string/requiredFields"/>

        </LinearLayout>
</ScrollView>